build: Switch binutils to master branch
Signed-off-by: Albert I <krascgq@outlook.co.id>

--- a/build
+++ b/build
@@ -182,7 +182,7 @@ function setup_variables() {
     JOBS="-j$(($(nproc --all) + 1))"
 
     # Binary versions
-    BINUTILS_git="binutils-2_31-branch"
+    BINUTILS_git="master"
     BINUTILS_tar="2.31"
     GMP="gmp-6.1.99-$(check_date)"
     MPFR_svn="trunk"
