build: Bump lzlib to 1.10 and plzip to 1.8-pre1
Signed-off-by: Albert I <krascgq@outlook.co.id>
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/build
+++ b/build
@@ -346,7 +346,7 @@ function build_binaries() {
     fi
 
     if [[ ! -f $(dirname "${PREBUILTS_BIN}")/lib/liblz.a ]]; then
-        LZLIB=lzlib-1.9
+        LZLIB=lzlib-1.10
         (
             cd sources || die "Failed to create sources directory!"
             [[ ! -f ${LZLIB}.tar.gz ]] && wget https://download.savannah.gnu.org/releases/lzip/lzlib/${LZLIB}.tar.gz
@@ -361,7 +361,7 @@ function build_binaries() {
     fi
 
     if [[ ! -f ${PREBUILTS_BIN}/plzip ]]; then
-        PLZIP=plzip-1.7
+        PLZIP=plzip-1.8-pre1
         (
             cd sources || die "Failed to create sources directory!"
             [[ ! -f ${PLZIP}.tar.gz ]] && wget https://download.savannah.gnu.org/releases/lzip/plzip/${PLZIP}.tar.gz
